# pseudocode-interpreter

./: .gitignore  Cargo.toml  README.md  ex.srs  index.html
.github/workflows/: codecov.yml
examples/: builtins.srs  echo_input.srs  fib.srs  fib_exp.srs  fib_iter.srs  fizzbuzz.srs  primes.srs
examples/invalid/: argument_shadowing.srs  oob_tuple_access.srs
fuzz/: Cargo.toml  srs.dict
fuzz/fuzz_targets/: parser.rs
src/: ast.rs  compile.rs  error.rs  eval.rs  grammar.lalrpop  lib.rs  main.rs  typecheck.rs  value.rs
src/compile/: mod.rs  ops_support.rs
src/parse/: common.rs  expr.rs  lexer.rs  mod.rs  state.rs  statement.rs  ty.rs
src/pretty_print/: html.rs  mod.rs  terminal.rs
tests/: programs.rs  pseudocode_guide_examples.rs  tests.rs
tests/common/: mod.rs
tests/programs/: call_void_function.srs  fib_exp.srs  fib_iter.srs  swap.srs  tiny.srs  tiny_return.srs
web/: Cargo.toml  README.md  Trunk.toml  index.html
web/js/: tokens_provider.js
web/src/: app.rs  debugger.rs  editor.rs  eval.rs  filemanager.rs  filestorage.rs  io.rs  lib.rs  main.rs  monaco_srs.rs  terry.rs  topbar.rs  worker.rs
web/static/: style.css
