[package]
name = "sc_int"
version = "0.1.0"
edition = "2021"

build = "build.rs" # LALRPOP preprocessing


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
by_address = "1.0.4"
clap = "3.2"
clap_derive = "3.2"
itertools = "0.10.5"
js-sys = "0.3.60"
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
wasm-bindgen = "0.2.83"


[build-dependencies]
lalrpop = "0.19.7"

[lib]
crate-type = ["cdylib", "rlib"]

