[package]
name = "pseudocode-interpreter"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = "3.2"
clap_derive = "3.2"
itertools = "0.10.5"
logos = "0.12.1"
thiserror = "1.0.37"


[lib]
crate-type = ["cdylib", "rlib"]

