[package]
name = "pseudocode-interpreter"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.32", features = ["derive"] }
im = "15.1.0"
itertools = "0.10.5"
logos = "0.12.1"
ordered-float = "3.4.0"
thiserror = "1.0.37"
ntest = "0.7.3"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
incremental = true


[workspace]
members = ["web"]
