[package]
name = "web"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = "0.2.0"
gloo-net = "0.2.6"
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-utils = "0.1.6"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }

yew = { version="0.20", features=["csr"] }

yewprint = "0.4"

[build-dependencies]
yewprint-css = "0.4.0"
