[package]
name = "web"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = "0.2.0"
gloo-net = "0.2.6"
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-utils = "0.1.6"
gloo-worker = { version = "0.2.1", features = ["futures"] }
itertools = "0.10.5"
js-sys = "0.3.61"
log = "0.4.17"
monaco = {git = "https://github.com/abesto/rust-monaco.git", rev = "9401e6bab6f406e46cf5a90ff3cb2372c48b7819", features = ["yew-components"]}
pseudocode-interpreter = { version = "0.1.0", path = ".." }
serde = { version = "1.0.152", features = ["derive"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }

yew = { version="0.20", features=["csr"] }

yewprint = "0.4"

[build-dependencies]
yewprint-css = "0.4.0"
